<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.product.detail.ProductDetailFragment"
    android:layout_margin="32dp">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/product_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:srcCompat="@drawable/ic_baseline_shopping_basket_24" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/product_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/productRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <RatingBar
        android:id="@+id/productRating"
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:backgroundTint="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="2dp"
        android:layout_marginTop="4dp"
        android:numStars="5"
        android:rating="3.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_description"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/productRating"
        app:layout_constraintBottom_toTopOf="@+id/addToCartBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <LinearLayout
        android:id="@+id/addToCartBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/add_to_cart"
            android:layout_weight="12"
            android:gravity="center"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnMinus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:backgroundTint="@color/md_grey_300"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:text="-"
            android:textColor="@color/md_grey_600"
            android:textSize="22sp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/etAmount"
            android:gravity="center"
            android:layout_weight="1"
            android:text="1"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="16sp"
            android:layout_width="60dp"
            android:layout_height="60dp" />


        <Button
            android:id="@+id/btnPlus"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:backgroundTint="@color/md_grey_300"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/md_grey_600"
            android:text="+"
            android:textSize="22sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>