<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnboardingActivity"
    android:background="@color/md_white_1000">

    <TextView
        android:id="@+id/textSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/skip"
        android:textColor="@color/md_grey_600"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="15dp"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:clipToPadding="false"
        android:overScrollMode="never"/>

    <RelativeLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/viewPager"
        android:layout_alignParentBottom="true">

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/pageIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            app:dotsColor="@color/md_grey_300"
            app:dotsCornerRadius="8dp"
            app:dotsSize="16dp"
            app:dotsSpacing="4dp"
            app:dotsWidthFactor="2.5"
            app:progressMode="true"
            app:selectedDotColor="@color/lighter_blue" />


        <Button
            android:id="@+id/btn_previous_step"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/back"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_grey_rounded_selector"/>


        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/next"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_blue_rounded_selector"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>