<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.basket.BasketSheetFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/basketTopBar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/lighter_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basket"
            android:textSize="28sp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
            android:id="@+id/btnClose"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="82dp"
            android:layout_height="45dp"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp"
            tools:ignore="SmallSp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBasketList"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/basketTopBar"
        tools:listitem="@layout/item_basket_list" />
    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat"
        android:text="Total Price: TL"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPurchase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnPurchase" />
    <Button
        android:id="@+id/btnPurchase"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:backgroundTint="@color/purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="@string/purchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_goneMarginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/rvBasketList"
        android:layout_marginEnd="16dp" />







</androidx.constraintlayout.widget.ConstraintLayout>