<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.signin.SignInFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/e_mail"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="402dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/custom_et"
                android:inputType="textEmailAddress"
                android:textSize="15sp"
                android:fontFamily="@font/open_sans_light"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/password"
            android:textColor="@android:color/darker_gray"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="19dp"
            tools:layout_editor_absoluteY="402dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#B4B4B4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/custom_et"
                android:inputType="textPassword"
                android:fontFamily="@font/open_sans_light"
                android:textSize="15sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_signin_btn"
            android:fontFamily="@font/open_sans"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:backgroundTint="#7364FF"
            />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
